--- a/www/style.css
+++ b/www/style.css
@@ -18,15 +18,22 @@ a:link, a:visited{
   background-color: #82526A;
   margin-top: -8px;
     margin-left: -8px;
-  width: 100%;
-  position: absolute;
+
+  width: 110%;
+  position: static;
   display: table;
   height: 40px;
   
   font-family: Optima, Segoe, "Segoe UI", Candara, Calibri, Arial, sans-serif;
   
 }
+#testDiv{
+width = 100%;
+height: 60px;
+/*position: absolute;*/
 
+
+}
 #screenTitle{
   font-weight: bold;
   display: table-cell;
