--- a/www/style.css
+++ b/www/style.css
@@ -2,7 +2,7 @@
 hr{
   border: none;
   height: 2px;
-  background-color:white;
+  background-color: #B4B4B4;
 }
 a {
     text-decoration: none;
@@ -12,6 +12,14 @@ a:link, a:visited{
    color: #7B7B7B;
    
     
+}
+
+#HomeLogo{
+position: absolute;
+/*display: talbe-cell;*/
+margin-left: 17px;
+margin-top: -35px;
+
 }
 
 #topRibbon{
@@ -39,7 +47,7 @@ height: 60px;
   display: table-cell;
   text-align: center;
   vertical-align: middle;
-  color: white;
+  color: #B4B4B4;
   font-size: 20px;
   
 }
@@ -51,6 +59,10 @@ height: 60px;
 .menu{
   color: #7B7B7B;
   font-family: Optima, Segoe, "Segoe UI", Candara, Calibri, Arial, sans-serif;
+
+}
+.menu a{
+font-size: 130%;
 }
 .menu hr{
     border: none;
